Fixed a bug with title section that caused the text to occasionally misalign with the picture

--- a/src/app/components/Home/title-section/title-section.component.css
+++ b/src/app/components/Home/title-section/title-section.component.css
@@ -27,10 +27,12 @@
 }
 
 .image-cropper {
-    width: 30vmin;
-    height: 30vmin;
+    width: 20vw;
+    height: 20vw;
     margin: 4% 31%;
+    vertical-align: middle;
     border: 3px solid white;
+    float: center;
     text-align: center;
     border-radius: 100%;
     background-size: cover;
@@ -72,7 +74,7 @@
     font-size: 30px;
     line-height: 30px;
     cursor: pointer;
-    border: none!important;
+    border: none !important;
 }
 @keyframes pulse_animation {
     0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
@@ -94,4 +96,13 @@
     transform-origin:70% 70%;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+}
+.about-text {
+    font-family: "Lato", sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100% !important;
+    vertical-align: middle;
+    display: table-cell;
+    
 }
